[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.21.1",
]

[project]
name = "pypi-changes"
description = "check out when packages changed"
readme.content-type = "text/markdown"
readme.file = "README.md"
keywords = [
  "environments",
  "isolated",
  "testing",
  "virtual",
]
license = "MIT"
maintainers = [{ name = "Bern치t G치bor", email = "gaborjbernat@gmail.com" }]
authors = [{ name = "Bern치t G치bor", email = "gaborjbernat@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "humanize>=4.9",
  "packaging>=23.2",
  "platformdirs>=4.2",
  "pypi-simple>=1.5",
  "requests>=2.31",
  "requests-cache>=1.2",
  "rich>=13.7",
]
optional-dependencies.testing = [
  "covdefaults>=2.3",
  "pytest>=8.0.2",
  "pytest-cov>=4.1",
  "pytest-mock>=3.12",
  "urllib3<2",
  "vcrpy>=6.0.1",
  "virtualenv>=20.25.1",
]
urls.Homepage = "https://github.com/gaborbernat/pypi_changes"
urls.Source = "https://github.com/gaborbernat/pypi_changes"
urls.Tracker = "https://github.com/gaborbernat/pypi_changes/issues"
scripts.pypi-changes = "pypi_changes.__main__:main"

[tool.hatch]
build.hooks.vcs.version-file = "src/pypi_changes/_version.py"
version.source = "vcs"

[tool.ruff]
select = ["ALL"]
line-length = 120
target-version = "py39"
isort = { known-first-party = ["pypi_changes"], required-imports = ["from __future__ import annotations"] }
ignore = [
  "CPY",    # No copyright header
  "INP001", # no implicit namespaces here
  "ANN101", # no type annotation for self
  "ANN401", # allow Any as type annotation
  "D203",   # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D212",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "S104",   # Possible binding to all interface
]
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # asserts allowed in tests...
  "FBT",     # don't care about booleans as positional arguments in tests
  "D",       # don"t care about documentation in tests
  "S603",    # `subprocess` call: check for execution of untrusted input
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
]

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
write-changes = true
count = true
skip = "*.yaml"

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = [
  "src",
  ".tox*/*/lib/python*/site-packages",
  ".tox*/pypy*/site-packages",
  ".tox*\\*\\Lib\\site-packages",
  "*/src",
  "*\\src",
]
report.fail_under = 98
report.omit = []
run.parallel = true
run.plugins = ["covdefaults"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
overrides = [{ module = ["virtualenv.*", "vcr.*"], ignore_missing_imports = true }]
