[metadata]
name = pypi_changes
description = check out when packages changed
long_description = file: README.md
long_description_content_type = text/markdown
url = http://pypi_changes.readthedocs.org
author = Bern치t G치bor
author_email = gaborjbernat@gmail.com
maintainer = Bern치t G치bor
maintainer_email = gaborbernat@python.org
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = virtual, environments, isolated, testing
project_urls =
    Source=https://github.com/gaborbernat/pypi_changes
    Tracker=https://github.com/gaborbernat/pypi_changes/issues

[options]
packages = find:
install_requires =
    humanize>=4.2.3
    packaging>=21.3
    platformdirs>=2.5.2
    pypi-simple>=0.10
    requests>=2.28.1
    requests-cache>=0.9.5
    rich>=12.5.1
    backports.cached-property>=1.0.2;python_version < "3.8"
    importlib-metadata>=4.12;python_version < "3.8"
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pypi-changes = pypi_changes.__main__:main

[options.extras_require]
docs =
    furo>=2022.6.21
    sphinx>=5.1.1
    sphinx-argparse-cli>=1.9
    sphinx-autodoc-typehints>=1.19.1
    sphinx-copybutton>=0.5
    sphinx-inline-tabs>=2022.1.2b11
    sphinxcontrib-towncrier>=0.2.1a0
    towncrier>=21.9
testing =
    covdefaults>=2.2
    pytest>=7.1.2
    pytest-cov>=3
    pytest-mock>=3.8.2
    vcrpy>=4.2
    virtualenv>=20.16.2

[options.package_data]
pypi_changes = py.typed

[coverage:run]
plugins = covdefaults

[coverage:paths]
src =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src

[coverage:report]
fail_under = 100

[coverage:html]
show_contexts = true
skip_covered = false

[mypy]
strict = true

[mypy-requests_cache.*]
ignore_missing_imports = True

[mypy-humanize.*]
ignore_missing_imports = True

[mypy-vcr.*]
ignore_missing_imports = True

[mypy-virtualenv.*]
ignore_missing_imports = True

[flake8]
max-complexity = 22
max-line-length = 120
noqa-require-code = true
dictionaries = en_US,python,technical,django
unused-arguments-ignore-abstract-functions = true

[pep8]
max-line-length = 120
