[metadata]
name = pypi_changes
description = check out when packages changed
long_description = file: README.md
long_description_content_type = text/markdown
url = http://pypi_changes.readthedocs.org
author = Bern치t G치bor
author_email = gaborjbernat@gmail.com
maintainer = Bern치t G치bor
maintainer_email = gaborbernat@python.org
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = virtual, environments, isolated, testing
project_urls =
    Source=https://github.com/gaborbernat/pypi_changes
    Tracker=https://github.com/gaborbernat/pypi_changes/issues

[options]
packages = find:
install_requires =
    humanize>=4.6
    packaging>=23.1
    platformdirs>=3.2
    pypi-simple>=1.1
    requests>=2.28.2
    requests-cache>=1.0.1
    rich>=13.3.4
    backports.cached-property>=1.0.2;python_version < "3.8"
    importlib-metadata>=6.4.1;python_version < "3.8"
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pypi-changes = pypi_changes.__main__:main

[options.extras_require]
docs =
    furo>=2023.3.27
    sphinx>=6.1.3
    sphinx-argparse-cli>=1.11
    sphinx-autodoc-typehints!=1.23.4,>=1.23
    sphinx-copybutton>=0.5.2
    sphinx-inline-tabs>=2022.1.2b11
    sphinxcontrib-towncrier>=0.2.1a0
    towncrier>=22.12
testing =
    covdefaults>=2.3
    pytest>=7.3.1
    pytest-cov>=4
    pytest-mock>=3.10
    vcrpy>=4.2.1
    virtualenv>=20.21

[options.package_data]
pypi_changes = py.typed

[coverage:run]
plugins = covdefaults

[coverage:paths]
src =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src

[coverage:report]
fail_under = 100

[coverage:html]
show_contexts = true
skip_covered = false

[mypy]
strict = true

[mypy-requests_cache.*]
ignore_missing_imports = True

[mypy-humanize.*]
ignore_missing_imports = True

[mypy-vcr.*]
ignore_missing_imports = True

[mypy-virtualenv.*]
ignore_missing_imports = True

[flake8]
max-complexity = 22
max-line-length = 120
noqa-require-code = true
dictionaries = en_US,python,technical,django
unused-arguments-ignore-abstract-functions = true

[pep8]
max-line-length = 120
